tests/type-destructors/type-destructors.exp
Error: element_type.js:1
  1: type BadArity = $ElementType<number, number, number>;
                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Incorrect number of type parameters (expected 2)

Error: element_type.js:7
  7: ('hello world': Arr_Elem);
      ^^^^^^^^^^^^^ string. This type is incompatible with
  7: ('hello world': Arr_Elem);
                     ^^^^^^^^ number

Error: element_type.js:18
 18: ('hello world': Obj_Elem);
      ^^^^^^^^^^^^^ string. This type is incompatible with
 18: ('hello world': Obj_Elem);
                     ^^^^^^^^ number

Error: non_maybe_type.js:5
  5:   else return 0; // this should be an error
                   ^ number. This type is incompatible with
  3: function foo(x: ?string): $NonMaybeType<?string> {
                               ^^^^^^^^^^^^^^^^^^^^^^ union: non-maybe type(s)
  Member 1:
    3: function foo(x: ?string): $NonMaybeType<?string> {
                                 ^^^^^^^^^^^^^^^^^^^^^^ non-maybe type
  Error:
    5:   else return 0; // this should be an error
                     ^ number. This type is incompatible with
    3: function foo(x: ?string): $NonMaybeType<?string> {
                                 ^^^^^^^^^^^^^^^^^^^^^^ empty
  Member 2:
    3: function foo(x: ?string): $NonMaybeType<?string> {
                                 ^^^^^^^^^^^^^^^^^^^^^^ non-maybe type
  Error:
    5:   else return 0; // this should be an error
                     ^ number. This type is incompatible with
    3: function foo(x: ?string): $NonMaybeType<?string> {
                                 ^^^^^^^^^^^^^^^^^^^^^^ empty
  Member 3:
    3: function foo(x: ?string): $NonMaybeType<?string> {
                                 ^^^^^^^^^^^^^^^^^^^^^^ non-maybe type
  Error:
    5:   else return 0; // this should be an error
                     ^ number. This type is incompatible with
    3: function foo(x: ?string): $NonMaybeType<?string> {
                                 ^^^^^^^^^^^^^^^^^^^^^^ string

Error: non_maybe_type.js:10
 10: (0: $NonMaybeType<null>); // error
      ^ number. This type is incompatible with
 10: (0: $NonMaybeType<null>); // error
         ^^^^^^^^^^^^^^^^^^^ empty

Error: property_type.js:1
  1: type Malformed = $PropertyType<any, number>;
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^ expected object type and string literal as arguments to $PropertyType

Error: property_type.js:6
  6: (42: Obj_Prop_x);
      ^^ number. This type is incompatible with
  6: (42: Obj_Prop_x);
          ^^^^^^^^^^ string

Error: property_type.js:10
 10:   else return 0;
                   ^ number. This type is incompatible with the expected return type of
  8: function foo(o: Obj): $PropertyType<Obj, 'x'> {
                           ^^^^^^^^^^^^^^^^^^^^^^^ string

Error: union.js:2
  2: var x1: $NonMaybeType<number|string> = true; // err, boolean ~> number|string
                                            ^^^^ boolean. This type is incompatible with
  2: var x1: $NonMaybeType<number|string> = true; // err, boolean ~> number|string
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ union: non-maybe type(s)
  Member 1:
    2: var x1: $NonMaybeType<number|string> = true; // err, boolean ~> number|string
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ non-maybe type
  Error:
    2: var x1: $NonMaybeType<number|string> = true; // err, boolean ~> number|string
                                              ^^^^ boolean. This type is incompatible with
    2: var x1: $NonMaybeType<number|string> = true; // err, boolean ~> number|string
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ number
  Member 2:
    2: var x1: $NonMaybeType<number|string> = true; // err, boolean ~> number|string
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ non-maybe type
  Error:
    2: var x1: $NonMaybeType<number|string> = true; // err, boolean ~> number|string
                                              ^^^^ boolean. This type is incompatible with
    2: var x1: $NonMaybeType<number|string> = true; // err, boolean ~> number|string
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ string

Error: union.js:4
  4: var x3: $PropertyType<{p:number}|{p:string},'p'> = true; // err, boolean ~> number|string
                                                        ^^^^ boolean. This type is incompatible with
  4: var x3: $PropertyType<{p:number}|{p:string},'p'> = true; // err, boolean ~> number|string
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ union: property type(s)
  Member 1:
    4: var x3: $PropertyType<{p:number}|{p:string},'p'> = true; // err, boolean ~> number|string
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ property type
  Error:
    4: var x3: $PropertyType<{p:number}|{p:string},'p'> = true; // err, boolean ~> number|string
                                                          ^^^^ boolean. This type is incompatible with
    4: var x3: $PropertyType<{p:number}|{p:string},'p'> = true; // err, boolean ~> number|string
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ number
  Member 2:
    4: var x3: $PropertyType<{p:number}|{p:string},'p'> = true; // err, boolean ~> number|string
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ property type
  Error:
    4: var x3: $PropertyType<{p:number}|{p:string},'p'> = true; // err, boolean ~> number|string
                                                          ^^^^ boolean. This type is incompatible with
    4: var x3: $PropertyType<{p:number}|{p:string},'p'> = true; // err, boolean ~> number|string
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ string


Found 10 errors
